core/sr-api/test/tests/ui/changed_in_unknown_version.stderr
error: `changed_in` version can not be greater than the `api_version`
  --> $DIR/changed_in_unknown_version.rs:14:3
   |
14 |         fn test(data: u64);
   |         ^^
